--- a/TopEducation/src/main/resources/templates/nuevoEstudiante.html
+++ b/TopEducation/src/main/resources/templates/nuevoEstudiante.html
@@ -14,20 +14,29 @@
         <div class="formcontainer">
             <hr/>
             <div class="container">
-                <label><strong>Codigo</strong></label>
+                <label><strong>Rut</strong></label>
                 <label for="rut"></label><input type="text" id = "rut"
-                                                placeholder="Ingrese el rut del estudiante" name="rut" required>
+                                                placeholder="Ingrese el rut" name="rut" required>
+                <br>
                 <label><strong>Nombre</strong></label>
                 <label for="nombreEstudiante"></label><input type="text" id = "nombreEstudiante"
-                                                             placeholder="Ingrese el nombre del estudiante" name="nombre" required>
-                <label><strong>Categoría</strong></label>
+                                                             placeholder="Ingrese el nombre" name="nombreEstudiante" required>
+                <br>
+                <label><strong>Apellido</strong></label>
                 <label for="nombreApellido"></label><input type="text" id = "nombreApellido"
-                                                           placeholder="Ingrese el apellido del estudiante" name="apellido" required>
-                <label><strong>Categoría</strong></label>
+                                                           placeholder="Ingrese el apellido" name="apellidoEstudiante" required>
+                <br>
+                <label><strong>Tipo Escuela (privado/ subvencionado/ comuna)</strong></label>
                 <label for="tipoEscuela"></label><input type="text" id = "tipoEscuela"
-                                                        placeholder="Ingrese el tipo de escuela del estudiante (privado/ subvencionado/ comuna)" name="tipo de escuela" required>
+                                                        placeholder="Ingrese el tipo de escuela" name="tipoEscuela" required>
+                <br>
+                <label><strong>Nombre Escuela</strong></label>
                 <label for="nombreEscuela"></label><input type="text" id = "nombreEscuela"
-                                                          placeholder="Ingrese el nombre de la escuela del estudiante" name="nombre de escuela" required>
+                                                          placeholder="Ingrese el nombre de la escuela" name="nombreEscuela" required>
+                <br>
+                <label><strong>Año Egreso</strong></label>
+                <label for="anioEgreso"></label><input type="text" id = "anioEgreso"
+                                                          placeholder="Ingrese el año de egreso" name="anioEgreso" required>
             </div>
             <button type="submit">Registrar Estudiante</button>
         </div>
