--- a/TopEducation/src/main/resources/templates/nuevoEstudiante.html
+++ b/TopEducation/src/main/resources/templates/nuevoEstudiante.html
@@ -26,6 +26,10 @@
                 <label for="nombreApellido"></label><input type="text" id = "nombreApellido"
                                                            placeholder="Ingrese el apellido" name="apellidoEstudiante" required>
                 <br>
+                <label><strong>Fecha Nacimiento (YYYY/MM/DD)</strong></label>
+                <label for="fechaNacimiento"></label><input type="text" id = "fechaNacimiento"
+                                                           placeholder="Ingrese fecha de nacimiento" name="fechaNacimiento" required>
+                <br>
                 <label><strong>Tipo Escuela (privado/ subvencionado/ comuna)</strong></label>
                 <label for="tipoEscuela"></label><input type="text" id = "tipoEscuela"
                                                         placeholder="Ingrese el tipo de escuela" name="tipoEscuela" required>
