--- a/TopEducation/src/main/resources/templates/listaEstudiante.html
+++ b/TopEducation/src/main/resources/templates/listaEstudiante.html
@@ -33,8 +33,12 @@
             <td>
                 <a class="btn btn-primary" href="#" role="button">Editar</a>
                 <a class="btn btn-danger" href="#" role="button">Eliminar</a>
+
             </td>
         </tr>
+
+        <a href="http://localhost:8090/nuevoEstudiante" class="button">Añadir Estudiante</a>
+
         </tbody>
     </table>
 </div>
