--- a/TopEducation/src/main/resources/templates/mostrarCuota.html
+++ b/TopEducation/src/main/resources/templates/mostrarCuota.html
@@ -26,10 +26,10 @@
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th>Número de Cuota</th><br>
-            <th>Valor de Cuota</th><br>
-            <th>Estado de Cuota</th><br>
-            <th>Fecha de Vencimiento</th><br>
+            <th>Número de Cuota</th>
+            <th>Valor de Cuota</th>
+            <th>Estado de Cuota</th>
+            <th>Fecha de Vencimiento</th>
         </tr>
         </thead>
         <tbody>
@@ -42,7 +42,6 @@
         </tr>
         </tbody>
     </table>
-
 </div>
 </body>
 </html>
