arreglo HU3 y se implemento HU7
Ahora se puede ver la fecha de vencimiento de las cuotas

--- a/TopEducation/src/main/resources/templates/generarCuota.html
+++ b/TopEducation/src/main/resources/templates/generarCuota.html
@@ -25,7 +25,7 @@
                 <select name="alumno" required>
                     <option value="">Selecciona un Alumno</option>
                     <option th:each="student : ${students}" th:value="${student.id}">
-                        <span th:text="${student.nombreEstudiante + student.apellidoEstudiante}"></span>
+                        <span th:text="${student.nombreEstudiante + ' ' + student.apellidoEstudiante}"></span>
                     </option>
                 </select>
             </label>
