--- a/TopEducation/src/main/resources/templates/nuevoEstudiante.html
+++ b/TopEducation/src/main/resources/templates/nuevoEstudiante.html
@@ -44,7 +44,7 @@
                 <br>
                 <label><strong>Tipo Escuela</strong></label>
                 <br>
-                <label for="municipal">Comuna:</label>
+                <label for="municipal">Municipal:</label>
                 <input type="radio" id="municipal" name="tipoEscuela" value="municipal" required>
                 <br>
                 <label for="subvencionado">Subvencionado:</label>
