--- a/TopEducation/src/main/resources/templates/mostrarCuota.html
+++ b/TopEducation/src/main/resources/templates/mostrarCuota.html
@@ -6,26 +6,28 @@
 </head>
 <body>
 <div class="container">
-    <h1><b>Mostrando Cuotas</b></h1>
 
+    <h1><b>Mostrando Cuotas</b></h1>
     <form th:action="@{/mostrarCuota}" method="POST">
         <h5>Seleccione un Estudiante:</h5>
         <label>
-            <select name="pago" required>
+            <select name="id_estudiante" required>
                 <option value="">Selecciona un Estudiante</option>
-                <option th:each="pago : ${pagos}" th:value="${pago.id}">
-                    <span th:text="${pago.getStudent().nombreEstudiante + ' ' + pago.getStudent().apellidoEstudiante}"></span>
+                <option th:each="student : ${students}" th:value="${student.id}">
+                    <span th:text="${student.nombreEstudiante + ' ' + student.apellidoEstudiante + ' '}"></span>
                 </option>
             </select>
         </label>
         <input type="submit" value="Mostrar Cuotas">
     </form>
     <br>
+
     <!-- Tabla para mostrar las cuotas del estudiante -->
     <table class="table">
         <thead class="thead-dark">
+        <hr>
         <tr>
-            <th>Número de Cuota</th>
+            <th>N° de Cuota</th>
             <th>Valor de Cuota</th>
             <th>Estado de Cuota</th>
             <th>Fecha de Vencimiento</th>
@@ -40,6 +42,15 @@
             <td th:text="${cuota.estadoCuota}"></td>
             <td th:text="${cuota.fechaVencimiento}"></td>
             <td th:text="${cuota.getGeneratePaymentsEntity().getTipoPago()}"></td>
+            <td>
+
+                <form  th:action="@{/registrarCuota}" method="POST">
+                    <input type="hidden" name="cuota_id" th:value="${cuota.id}">
+                    <button type="submit" class="btn btn-primary">Pagar</button>
+                </form>
+
+            </td>
+            </hr>
         </tr>
         </tbody>
     </table>
