--- a/TopEducation/src/main/resources/templates/cargarCSV.html
+++ b/TopEducation/src/main/resources/templates/cargarCSV.html
@@ -23,6 +23,9 @@
         <br>
         <input class = "btn btn-primary"
                type="submit" value="Cargar el archivo a la Base de Datos">
+
+        <input class="btn btn-primary"
+               type="submit" value="Aplicar tasa de descuentos a cuotas">
     </form>
     <br>
     <!--<u><b> <h2 th:text="${mensaje}"></h2></b></u>-->
@@ -31,6 +34,11 @@
 <div class = "form1">
     <h5><b>Recuerde que debe cargar un archivo Excel de extensión .csv!</b></h5>
 </div>
+
+<div class = "form1">
+    <h5><b>Recuerde que debe cargar un archivo Excel de extensión .csv!</b></h5>
+</div>
+
 
 </body>
 </html>
