cambios en atributos y servicios
Se cambiaron las entidades, agregando atributos convenientes para generar el reporte. Del reporte solo faltan las cuotas con retraso

--- a/TopEducation/src/main/resources/templates/cargarCSV.html
+++ b/TopEducation/src/main/resources/templates/cargarCSV.html
@@ -26,7 +26,7 @@
     </form>
     <br>
 
-    <form  th:action="@{/aplicarPuntaje}" method="POST">
+    <form  th:action="@{/aplicarDescuentoPromedio}" method="POST">
         <button type="submit" class="btn btn-primary">Aplicar Puntaje</button>
     </form>
 
