--- a/TopEducation/src/main/resources/templates/nuevoEstudiante.html
+++ b/TopEducation/src/main/resources/templates/nuevoEstudiante.html
@@ -39,7 +39,7 @@
                                                            placeholder="Ingrese el apellido" name="apellidoEstudiante" required>
                 <br>
                 <label><strong>Fecha Nacimiento (YYYY/MM/DD)</strong></label>
-                <label for="fechaNacimiento"></label><input type="text" id = "fechaNacimiento"
+                <label for="fechaNacimiento"></label><input type="date" id = "fechaNacimiento"
                                                            placeholder="Ingrese fecha de nacimiento" name="fechaNacimiento" required>
                 <br>
                 <label><strong>Tipo Escuela</strong></label>
